Fixed the go to source font color on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -289,6 +289,11 @@ center > img {
     margin: 0 auto;
 }
 
+.goToSource {
+    text-decoration: none;
+    color:#9d9d9d;
+}
+
 @media screen and (min-width: 768px) {
     .gallery {
         grid-template-columns: repeat(2, auto);
